--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
   padding: 20px;
   border-radius: 40px;
   margin-top: 5px;
-  word-break: break-all;
+  word-wrap: break-word;
   font-size: 1.2em;
 }
 .bot{
