--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 .bbut{
   dispaly: flex;
   margin-top: 5px;
+  animation: show 200ms ease-in-out;
 }
 .botbutton{
   background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC  51%, #02AAB0  100%);
